--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@
     padding: var(--spacing);
   }
     
-  
   h1 {
     width: 100%;
     text-align: center;
@@ -151,7 +150,7 @@
         "student"
         "main"
         "time"
-        "alumno"
+        "alumni"
         "footer";
     }
   }
